- Arrows in CSS instead of GIF + rework switchMenu() in warehouse.js & stylesheet.css
- Food Service icons: correct path & limit to image files in MenuItems.php
- CSS hack: Replace the modules icons in CSS trick in themes/README
- show 80 previous years instead of 20 in Date.php
- Bugfix SQL bug for user autos field when add values found in current and previous year in Search.fnc.php

Upgrade from 2.7.x
------------------
- Extract the 2.8 files
- Execute the SQL commands, see https://gist.github.com/francoisjacquet/b451c8006d5e1978fb0d
- Note: you can activate Registration via School Setup > School Configuration


Changes in 2.7.4
----------------
- Bugfix cannot create calendar after adding new school in Calendar.php

Changes in 2.7.3
----------------
- Bugfix SQL error invalid input syntax for type numeric in InputFinalGrades.php & Courses.php
- Bugfix SQL error unterminated quoted identifier in InputFinalGrades.php
- Bugfix SQL error column "period_id" does not exist in UnfilledRequests.php

Changes in 2.7.2
----------------
- Bugfix SQL error more than one row returned by a subquery used as an expression in Export.php
- Rollback select all the course periods (for all the selected mps) of the same course in InputFinalGrades.php

Changes in 2.7.1
----------------
- Add widget & hide + remove cellpadding-0/1/2/3/4/6 CSS classes, programwide
- Add check wkhtmltopdf binary exists in diagnostic.php
- Remove inline CSS in index.php & Address.inc.php
- Bugfix SQL error more than one row returned by a subquery used as an expression in GetStuList.fnc.php (Fix #92)
- Bugfix display Moodle rollover error only if rolled once in Moodle/functions.php

Changes in 2.7
--------------
- Remove $RosarioAdmins list in config.inc.php
- Move $RosarioModules to database CONFIG table
- Bigger config values capacity to accept serialized variables in rosariosis.sql
- Remove $RosarioModules + MOODLE_INTEGRATOR in config.inc.php
- Add SendEmail function