@@ -60,6 +60,7 @@ Changes in 2.8
 - CSS hack: Replace the modules icons in CSS trick in themes/README
 - show 80 previous years instead of 20 in Date.php
 - Bugfix SQL bug for user autos field when add values found in current and previous year in Search.fnc.php
+- Solve conflict student/user_id=new in Side.php
 
 Upgrade from 2.7.x
 ------------------
